--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -45,9 +45,6 @@
 	align-items: center;
 }
 
-.header__li.header__basketIcon span {
-	margin-left: 10px;
-}
 
 .header__basketIconLink {
 	text-decoration: none;
@@ -61,4 +58,17 @@
 .header__linkSignIn {
 	text-decoration: none;
 	color: #fff;
+}
+
+/* MEDIA QUERY MOBILE */
+
+@media only screen and (max-width: 480px) {
+
+
+	.header {
+		background-color: red;
+	}
+
+
+
 }
