--- a/src/component/Header/HeaderMobile/headerMobile.css
+++ b/src/component/Header/HeaderMobile/headerMobile.css
@@ -125,6 +125,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
+	z-index: 999;
 }
 
 .header__topNav {
@@ -190,4 +191,22 @@
     font-size: 25px;
 	margin: 5px;
 	
+}
+
+
+/* HORIZONTAL SCROLL MENU CATEGORIES */
+.header__categoriesList {
+	white-space: nowrap;
+	overflow: auto;
+	border-top: 1px solid lightgrey;
+}
+
+.header__categoriesList li{
+	display: inline-block;
+	color: #fff;
+	text-align: center;
+	padding: 14px;
+	text-decoration: none;
+	border-right: 1px solid lightgrey;
+	padding: 7px;
 }
