--- a/src/component/Product/product.css
+++ b/src/component/Product/product.css
@@ -49,35 +49,43 @@
 @media only screen and (max-width: 480px) {
 	.product {
 		z-index: 1;
-		display: flex;
-		flex-direction: row-reverse;
 		background-color: #fff;
-		width: 100%;
-		border-bottom: 1px solid grey;
+		width: 160px;
+		height: 250px;
+		border: 1px solid grey;
+		text-align: center;
+		padding-top: 5px;
+		box-shadow: inset 0 0 5px #333;
 	}
 
-	.product:first-child {
-		margin-top: 130px;
+	.product:first-child, .product:nth-child(2) {
+		margin-top: 170px;
 	}
 
-	.product:not(:first-child) {
+	.product:not(:first-child):not(:nth-child(2)) {
 		margin-top: 10px;
+	}
+
+	.product:nth-last-child(-n+2) {
+		margin-bottom: 160px;
 	}
 
 	.product__info {
 		margin: 0 7px 6px 10px;
 	}
 
-	.product__imageContainer {
-		margin-left: 7px;
-	}
-
 	.product .product__image {
-		width: 100px;
+		width: 150px;
 		object-fit: contain;
 	}
 
 	.product__ratingStar {
 		height: 15px;
+	}
+
+	.home__row {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
 	}
 }
